# TradeAlertRust

./: .cursorrules  .dockerignore  .gitignore  .railway-ignore  AI_CONTEXT.md  CLAUDE.md  Cargo.toml  Dockerfile  RAILWAY_DEPLOY_GUIDE.md  README.md  TODO.md  TODO看板分工规则标准.md  _config.local.toml  _env.example  askama.toml  config.toml  config.toml.example  friend_test_guide.md  nixpacks.toml  railway.env.example  railway.toml  run_server.bat  start.bat  test_a_share_simple.rs  test_api.ps1  test_currency_fix.html  test_email.ps1  test_market_search.html  test_monitoring.html  test_yahoo_api.ps1
.claude/: settings.local.json
.cursor/: modes.json
.sqlx/: query-02ddb21cd7673c0b26754c4eef599101255e53aa20ac1812358fcb538d832d6b.json  query-08896f253d8cd08cb1ba77824e7c3961254b94ac521e3362886ed16da1b0de39.json  query-0897a10936264ad5551e590fdbe82244a5d8d2a6365a0a4ad27e50bdbce6e55c.json  query-09e2bd6d2face5d9096d0d1d21f0066d4738951812d79e621b1157d55d19ba1b.json  query-0c8cf618683c4a76b56e192a9c902bbf315c18f013849b1ea1b94cc18d5a4538.json  query-16653c8ccfe62953c161562dae37ba9d4f4d9e66384596f08d195e039d16dec0.json  query-1e26e14f035aac73e90675e54f58612c5a0444f6e88102c48fe4c6799b5ec546.json  query-1e277041c39dfe96210e3820d9f79b5e847b6fd9bea86932dca05dc565755d5c.json  query-2b5eae0713e046b61afd80bf5790dc8eb4239f1d801f51fce0ba7cce683ceb4f.json  query-3123d29751f8d659b0d89eb7a0eff95283f2fc2b929a3a54cfdce0c942d64f9a.json  query-591f639a11b814b8c065e46afc84f98c2a51012519c1b29dc3d42057b127b18c.json  query-5c0af134da45f46ea6d68237f1587bab4aefe62b46db55c4f096d6784e7b2b87.json  (+28 more)
(+183 files in other folders)
