[package]
name = "trade_alert_rust"
version = "0.1.0"
edition = "2021"
default-run = "trade_alert_rust"

[[bin]]
name = "trade_alert_rust"
path = "src/main.rs"

[lib]
name = "trade_alert_rust"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros", "migrate"], default-features = false }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Task scheduling
tokio-cron-scheduler = "0.9"

# Configuration
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Template engine
askama = "0.12"
askama_axum = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
rand = "0.8"
toml = "0.8"

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }

[dev-dependencies]
tokio-test = "0.4" 